--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -26,5 +26,7 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # turn off gem animation to save battery
 CONFIG_NICE_VIEW_GEM_ANIMATION=n
+# Name
+CONFIG_ZMK_KEYBOARD_NAME="Baruch"
 
 # source: https://github.com/M165437/nice-view-gem/blob/main/README.md
