--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -7,6 +7,9 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # enable deep sleep support
 CONFIG_ZMK_SLEEP=y
 
+# enable mouse control
+CONFIG_ZMK_POINTING=y
+
 # the keyboard disconnects from bluetooth.
 # uses very little power, but it may take
 # a few seconds to reconnect after waking.
@@ -15,7 +18,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
 # "Eager Debouncing"
 # Trying to lower the input lag.
-# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+# CONFIG_ZMK_KSCAN_DBOUNCE_PRESS_MS=1
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # --- DISPLAY SETTINGS ---
